--- a/stock-ui/src/app/modules/home/home.component.html
+++ b/stock-ui/src/app/modules/home/home.component.html
@@ -1,22 +1,20 @@
 <div class="grid">
     <div class="col-12">
         <div class="flex justify-content-center align-content-center text-align-center">
+
             <!--SIGN-IN-->
-            <form>
-                <p-card
-                  styleClass="mt-10" 
-                  header="Login" 
-                  subheader="Login with your account!"
-                  *ngIf="loginCard" 
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmitLogin()">
+                <p-card styleClass="mt-10" header="Login" subheader="Sign-in with your account!" 
+                  *ngIf="loginCard"
                 >
                     <div class="flex justify-content-center align-content-center text-align-center">
-                        <input type="email" pInputText placeholder="Email" />
+                        <input type="email" pInputText placeholder="Email" formControlName="email"/>
                     </div>
                     <div class="flex justify-content-center align-content-center text-align-center mt-3">
-                        <input type="password" pInputText placeholder="Password" />
+                        <input type="password" pInputText placeholder="Password" formControlName="password"/>
                     </div>
                     <div class="card flex justify-content-center mt-3">
-                        <button type="submit" pButton pRipple label="Login"></button>
+                        <button type="submit" pButton pRipple label="Login" [disabled]="!this.loginForm.valid"></button>
                     </div>
                     <span 
                       class="flex justify-content-center align-content-center text-align-center mt-3 font-semibold"
@@ -29,24 +27,21 @@
             </form>
 
              <!--SIGN-UP-->
-            <form>
-                <p-card
-                  styleClass="mt-10" 
-                  header="Create account" 
-                  subheader="Create a new account for free!"
+            <form [formGroup]="createAccountForm" (ngSubmit)="onSubmitCreateAccount()">
+                <p-card styleClass="mt-10" header="Create account" subheader="Sign-up a new account for free!" 
                   *ngIf="!loginCard"
                 >
                     <div class="flex justify-content-center align-content-center text-align-center">
-                        <input type="text" pInputText placeholder="Name" />
+                        <input type="text" pInputText placeholder="Name" formControlName="name"/>
                     </div>
                     <div class="flex justify-content-center align-content-center text-align-center mt-3">
-                        <input type="email" pInputText placeholder="Email" />
+                        <input type="email" pInputText placeholder="Email" formControlName="email"/>
                     </div>
                     <div class="flex justify-content-center align-content-center text-align-center mt-3">
-                        <input type="password" pInputText placeholder="Password" />
+                        <input type="password" pInputText placeholder="Password" formControlName="password"/>
                     </div>
                     <div class="card flex justify-content-center mt-3">
-                        <button type="submit" pButton pRipple label="Create"></button>
+                        <button type="submit" pButton pRipple label="Create" [disabled]="!this.createAccountForm.valid"></button>
                     </div>
                     <span 
                       class="flex justify-content-center align-content-center text-align-center mt-3 font-semibold"
