--- a/stock-ui/src/styles.scss
+++ b/stock-ui/src/styles.scss
@@ -1,9 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-/* You can add global styles to this file, and also import other style files */
 * {
   html,
   body,
-  div,
+  //div,
   span,
   applet,
   object,
